# pademwGui

./: CMakeLists.txt  README.md
include/: form.h  form.h~
src/: form.cpp  form.cpp~  form.ui  uitest.cpp  uitest.cpp~
